fix home page responsive and scrollbar

--- a/style.css
+++ b/style.css
@@ -477,14 +477,11 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
-.left-0 {
-  left: 0px;
+.left-\[50\%\] {
+  left: 50%;
 }
 .top-0 {
   top: 0px;
-}
-.left-\[50\%\] {
-  left: 50%;
 }
 .z-0 {
   z-index: 0;
@@ -600,20 +597,14 @@ video {
 .h-\[0\.5px\] {
   height: 0.5px;
 }
+.h-\[80vh\] {
+  height: 80vh;
+}
 .h-full {
   height: 100%;
 }
 .h-px {
   height: 1px;
-}
-.h-screen {
-  height: 100vh;
-}
-.h-\[90vh\] {
-  height: 90vh;
-}
-.h-\[80vh\] {
-  height: 80vh;
 }
 .max-h-fit {
   max-height: -moz-fit-content;
@@ -648,9 +639,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-4\/12 {
-  width: 33.333333%;
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -751,10 +739,6 @@ video {
 .bg-transparent {
   background-color: transparent;
 }
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -814,6 +798,9 @@ video {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -822,9 +809,6 @@ video {
 }
 .pt-48 {
   padding-top: 12rem;
-}
-.pl-\[8\.333\%\] {
-  padding-left: 8.333%;
 }
 .text-center {
   text-align: center;
@@ -860,10 +844,6 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -878,6 +858,10 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.text-\[\#eb0000\] {
+  --tw-text-opacity: 1;
+  color: rgb(235 0 0 / var(--tw-text-opacity));
 }
 .text-gray-100 {
   --tw-text-opacity: 1;
@@ -920,10 +904,6 @@ video {
 }
 .brightness-50 {
   --tw-brightness: brightness(.5);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.brightness-150 {
-  --tw-brightness: brightness(1.5);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition-all {
@@ -1215,6 +1195,41 @@ footer #menu-footer .current_page_item::after {
     transform: rotate(360deg);
   }
 }
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(243, 244, 246);
+  border-left: 1px solid rgb(209, 213, 219);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(229, 231, 235);
+  border-left: 1px solid rgb(209, 213, 219);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(209, 213, 219);
+}
+
+.dark {
+  /* Track */
+  /* Handle */
+}
+.dark ::-webkit-scrollbar-track {
+  background: rgb(17, 24, 39);
+  border-left: 1px solid rgb(55, 65, 81);
+}
+.dark ::-webkit-scrollbar-thumb {
+  background: rgb(31, 41, 55);
+  border-left: 1px solid rgb(55, 65, 81);
+}
+.dark ::-webkit-scrollbar-thumb:hover {
+  background: rgb(55, 65, 81);
+}
 .disabled\:pointer-events-none:disabled {
   pointer-events: none;
 }
@@ -1294,10 +1309,6 @@ footer #menu-footer .current_page_item::after {
 :is(.dark .dark\:text-gray-600) {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-:is(.dark .dark\:brightness-50) {
-  --tw-brightness: brightness(.5);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 @media (min-width: 768px) {
   .md\:order-1 {
@@ -1392,6 +1403,10 @@ footer #menu-footer .current_page_item::after {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1435,6 +1450,12 @@ footer #menu-footer .current_page_item::after {
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
+  .lg\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+  .lg\:ml-\[8\.333\%\] {
+    margin-left: 8.333%;
+  }
   .lg\:ml-\[8\.33333\%\] {
     margin-left: 8.33333%;
   }
@@ -1444,23 +1465,8 @@ footer #menu-footer .current_page_item::after {
   .lg\:mt-0 {
     margin-top: 0px;
   }
-  .lg\:mt-12 {
-    margin-top: 3rem;
-  }
-  .lg\:mt-24 {
-    margin-top: 6rem;
-  }
-  .lg\:mt-32 {
-    margin-top: 8rem;
-  }
   .lg\:mt-64 {
     margin-top: 16rem;
-  }
-  .lg\:mb-6 {
-    margin-bottom: 1.5rem;
-  }
-  .lg\:ml-\[8\.333\%\] {
-    margin-left: 8.333%;
   }
   .lg\:block {
     display: block;
@@ -1486,9 +1492,6 @@ footer #menu-footer .current_page_item::after {
   .lg\:w-4\/12 {
     width: 33.333333%;
   }
-  .lg\:w-40 {
-    width: 10rem;
-  }
   .lg\:w-5\/12 {
     width: 41.666667%;
   }
@@ -1497,6 +1500,9 @@ footer #menu-footer .current_page_item::after {
   }
   .lg\:w-7\/12 {
     width: 58.333333%;
+  }
+  .lg\:w-8\/12 {
+    width: 66.666667%;
   }
   .lg\:w-9\/12 {
     width: 75%;
@@ -1510,14 +1516,15 @@ footer #menu-footer .current_page_item::after {
   .lg\:w-auto {
     width: auto;
   }
-  .lg\:w-8\/12 {
-    width: 66.666667%;
-  }
   .lg\:flex-row {
     flex-direction: row;
   }
   .lg\:items-center {
     align-items: center;
+  }
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
   .lg\:py-12 {
     padding-top: 3rem;
@@ -1531,21 +1538,17 @@ footer #menu-footer .current_page_item::after {
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
-  .lg\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
   .lg\:pb-0 {
     padding-bottom: 0px;
   }
   .lg\:pl-\[8\.333\%\] {
     padding-left: 8.333%;
   }
+  .lg\:pr-4 {
+    padding-right: 1rem;
+  }
   .lg\:pt-0 {
     padding-top: 0px;
-  }
-  .lg\:pt-12 {
-    padding-top: 3rem;
   }
   .lg\:text-2xl {
     font-size: 1.5rem;
@@ -1578,10 +1581,6 @@ footer #menu-footer .current_page_item::after {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-  .lg\:brightness-100 {
-    --tw-brightness: brightness(1);
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
   .lg\:hover\:ml-2:hover {
     margin-left: 0.5rem;
@@ -1616,9 +1615,6 @@ footer #menu-footer .current_page_item::after {
     --tw-brightness: brightness(.75);
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
-  .group:hover .lg\:group-hover\:ml-2 {
-    margin-left: 0.5rem;
-  }
   .group:hover .lg\:group-hover\:ml-4 {
     margin-left: 1rem;
   }
@@ -1637,10 +1633,6 @@ footer #menu-footer .current_page_item::after {
   }
   .group:hover .lg\:group-hover\:opacity-100 {
     opacity: 1;
-  }
-  :is(.dark .dark\:lg\:brightness-100) {
-    --tw-brightness: brightness(1);
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
   :is(.dark .dark\:lg\:hover\:bg-gray-100:hover) {
     --tw-bg-opacity: 1;
